# silver

./: .gitignore  CMakeLists.txt  README.md  silver.pc.in
.github/workflows/: ci.yml
cmake/: silver-config.cmake.in
docs/: README.md  _sidebar.md  contributing.md  index.html
docs/api/: reference.md
docs/codegen/: emitter.md  isel.md  overview.md  regalloc.md
docs/examples/: fibonacci.md  hello-world.md
docs/guide/: command-line.md  getting-started.md  installation.md
docs/ir/: builder.md  instructions.md  module.md  overview.md  types.md  values.md
docs/optimization/: algebraic.md  const-fold.md  copy-prop.md  dce.md  overview.md  strength.md
docs/output/: elf.md  macho.md  pe.md
docs/targets/: arm64.md  riscv64.md  x86-64.md
examples/: fibonacci.c  hello_world.c
include/silver/: silver.h
include/silver/codegen/: emitter.h  isel.h  machine.h
include/silver/debug/: dwarf.h
include/silver/ir/: ir_builder.h  ir_inst.h  ir_module.h  ir_type.h  ir_value.h
include/silver/link/: elf.h  macho.h  pe.h
include/silver/opt/: algebraic.h  const_fold.h  copy_prop.h  dce.h  passes.h  strength.h
include/silver/support/: arena.h  buffer.h  error.h
src/: silver.c
src/codegen/: emitter.c  isel.c  machine.c
src/debug/: dwarf.c
src/ir/: ir_builder.c  ir_inst.c  ir_module.c  ir_type.c  ir_value.c
src/link/: elf.c  macho.c  pe.c
src/opt/: algebraic.c  const_fold.c  copy_prop.c  dce.c  passes.c  strength.c
src/support/: arena.c  buffer.c  error.c
tests/benchmarks/: bench_code_quality.c  bench_compile_speed.c
tests/integration/: test_full_pipeline.c  test_platforms.c
tests/unit/: test_arena.c  test_codegen.c  test_ir.c  test_opt.c  test_targets.c
tools/analyzer/: silver_analyze.c
tools/driver/: main.c
tools/dump/: dump.c
